--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.9",
     "astro-loading-indicator": "^0.7.1",
+    "astro-min": "^1.3.1",
     "astro-opengraph-images": "^1.14.0",
     "astro-robots-txt": "^1.0.0",
     "astro-sitemap": "^1.0.0",
