--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-opengraph-images": "^1.14.0",
     "astro-robots-txt": "^1.0.0",
     "astro-sitemap": "^1.0.0",
+    "nodemailer": "^7.0.12",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18"
